--- a/css/style.css
+++ b/css/style.css
@@ -225,7 +225,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .header {
-  position: relative;
+  position: fixed;
+  width: 100%;
   background-color: #fff;
   z-index: 1200;
 }
