--- a/css/style.css
+++ b/css/style.css
@@ -225,15 +225,15 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .header {
-  position: fixed;
+  position: relative;
   width: 100%;
   background-color: #fff;
   z-index: 1200;
 }
 
 .header-top {
-  padding: 49px 0 37px 0;
-  border-bottom: 1px solid rgba(36, 41, 41, 0.1);
+  padding: 35px 0 25px 0;
+  border-bottom: 1px solid #2429291a;
   z-index: 1108;
 }
 @media (max-width: 991px) {
@@ -376,6 +376,9 @@ h1, h2, h3, h4, h5, h6 {
     order: 1;
     width: 110px;
   }
+}
+.link__logo{
+	display: block;
 }
 .header-top__right {
   position: relative;
@@ -2399,20 +2402,30 @@ h1, h2, h3, h4, h5, h6 {
   align-items: center;
 }
 .footer__top {
-  padding: 5% 0 3.7%;
+  padding: 40px 0 30px;
 }
 .footer__top img {
   max-width: 100%;
 }
-@media (max-width: 767px) {
-  .footer__top {
-    width: 40%;
-  }
+@media (max-width: 992px) {
+	.footer__top {
+		padding: 25px 0 20px;
+	 }
 }
 .footer__bottom {
   width: 100%;
-  padding-bottom: 7.5%;
+  padding: 0px 0px 59px 0px;
 }
+ @media(max-width: 1199px){
+	.footer__bottom {
+		padding: 0px 0px 40px 0px;
+	}
+ }
+ @media(max-width: 1199px){
+	.footer__bottom {
+		padding: 0px 0px 25px 0px;
+	}
+ }
 .footer__list {
   display: -moz-flex;
   display: -ms-flex;
@@ -2421,6 +2434,7 @@ h1, h2, h3, h4, h5, h6 {
   justify-content: space-between;
 }
 .footer__link {
+	display: block;
   font-size: calc(10px + 6 * ((100vw - 320px) / 1600));
   text-transform: uppercase;
   line-height: 1.875;
@@ -2428,6 +2442,23 @@ h1, h2, h3, h4, h5, h6 {
 }
 .footer__link:hover {
   color: rgba(255, 255, 255, 0.6);
+}
+@media(max-width: 1199px){
+	.footer__top .footer__link{
+		width: 180px;
+
+	}
+}
+ 
+@media(max-width: 991px){
+	.footer__top .footer__link{
+		width: 140px;
+	}
+}
+@media(max-width: 767px){
+	.footer__top .footer__link{
+		width: 120px;
+	}
 }
 
 /* ----------subfooter-------------------- */
